syntax = "proto3";

package proto;

option go_package = "github.com/dipdup-io/starknet-indexer/pkg/grpc/pb";

message Block {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    string version = 4;
    uint64 tx_count = 5;
    uint64 invokes_count = 6;
    uint64 declares_count = 7;
    uint64 deploys_count = 8;
    uint64 deploy_account_count = 9;
    uint64 l1_handlers_count = 10;
    uint64 storage_diffs_count = 11;
    uint64 status = 12;
    bytes hash = 13;
    bytes parent_hash = 14;
    bytes new_root = 15;
    bytes sequencer_address = 16;
}

message Declare {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    uint64 version = 4;
    uint64 position = 5;
    bytes sender = 6;
    uint64 sender_id = 7;
    bytes contract = 8;
    uint64 contract_id = 9;
    uint64 status = 10;
    bytes class = 11;
    bytes hash = 12;
    string max_fee = 13;
    string nonce = 14;
}

message DeployAccount {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    uint64 position = 4;
    bytes contract = 5;
    uint64 contract_id = 6;
    uint64 status = 7;
    bytes class = 8;
    bytes hash = 9;
    bytes salt = 10;
    string max_fee = 11;
    string nonce = 12;
    repeated string calldata = 13;
    bytes parsed_calldata = 14;
}

message Deploy {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    uint64 position = 4;
    bytes contract = 5;
    uint64 contract_id = 6;
    uint64 status = 7;
    bytes class = 8;
    bytes hash = 9;
    bytes salt = 10;
    repeated string calldata = 11;
    bytes parsed_calldata = 12;
}

message Event {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    uint64 order = 4;
    bytes contract = 5;
    uint64 contract_id = 6;
    bytes from = 7;
    uint64 from_id = 8; 
    repeated string keys = 9;
    repeated string data = 10;
    string name = 11;
    bytes parsed_data = 12;
}

message Fee {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    bytes contract = 4;
    uint64 contract_id = 5;
    bytes caller = 6;
    uint64 caller_id = 7; 
    bytes class = 8;
    bytes selector = 9;
    uint64 entrypoint_type = 10;
    uint64 call_type = 11;
    repeated string calldata = 12;
    repeated string result = 13;
    string entrypoint = 14;
    bytes parsed_calldata = 15;
}

message Internal {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    uint64 status = 4;
    bytes hash = 5;
    bytes contract = 6;
    uint64 contract_id = 7;
    bytes caller = 8;
    uint64 caller_id = 9;
    bytes class = 10;
    bytes selector = 11;
    uint64 entrypoint_type = 12;
    uint64 call_type = 13;
    repeated string calldata = 14;
    repeated string result = 15;
    string entrypoint = 16;
    bytes parsed_calldata = 17;
    bytes parsed_result = 18;
}

message Invoke {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    uint64 status = 4;
    bytes hash = 5;
    uint64 version = 6;
    uint64 position = 7;
    bytes contract = 8;
    uint64 contract_id = 9;
    bytes selector = 10;
    string max_fee = 11;
    string nonce = 12;
    repeated string calldata = 13;
    string entrypoint = 14;
    bytes parsed_calldata = 15;
}

message L1Handler {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    uint64 status = 4;
    bytes hash = 5;
    uint64 position = 6;
    bytes contract = 7;
    uint64 contract_id = 8;
    bytes selector = 9;
    string max_fee = 10;
    string nonce = 11;
    repeated string calldata = 12;
    string entrypoint = 13;
    bytes parsed_calldata = 14;
}

message StarknetMessage {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    bytes contract = 4;
    uint64 contract_id = 5;
    bytes from = 6;
    uint64 from_id = 7;
    bytes to = 8;
    uint64 to_id = 9;
    string selector = 10;
    string nonce = 11;
    repeated string payload = 12; 
}

message StorageDiff {
    uint64 id = 1;
    uint64 height = 2;
    bytes contract = 3;
    uint64 contract_id = 4;
    bytes key = 5;
    bytes value = 6; 
}

message TokenBalance {
    bytes owner = 1;
    uint64 owner_id = 2;
    bytes contract = 3;
    uint64 contract_id = 4;
    string token_id = 5;
    string balance = 6;
}

message Transfer {
    uint64 id = 1;
    uint64 height = 2;
    uint64 time = 3;
    bytes contract = 4;
    uint64 contract_id = 5;
    bytes from = 6;
    uint64 from_id = 7;
    bytes to = 8;
    uint64 to_id = 9;
    string amount = 10;
    string token_id = 11;
}

message Token {
    uint64 id = 1;
    uint64 deploy_height = 2;
    uint64 deploy_time = 3;
    bytes contract = 4;
    uint64 contract_id = 5;
    bytes owner = 6;
    int32 type = 7;
    bytes metadata = 8;
}